--- a/style.css
+++ b/style.css
@@ -1,4 +1,61 @@
-body {background-color:tan;}
-h1{color:green;}
+* {
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+    font-family: 'Times New Roman', Times, serif;
+}
+html {
+    background-color: black;
+}
+body {
+    background-color: white;
+    height: 450px;
+    width: 600px;
+    border-radius: 2%;
+    margin: 30px;
+    top: 20px;
+
+}
+
+header {
+    width: 100%;
+    text-align: left;
+    padding-left: 20px;
+    padding-bottom: 40px;
+    padding-top: 40px;
+}
+
+main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: nowrap;    
+}
+
+
+label {
+    display: inline-block;
+    width: 110px;
+}
+
+#main {
+    width: 300px;
+}
+
+#thisOne {
+    display: inline;
+}
+
+h1 {
+    color:gray;
+}
+
+footer {
+    width: 100%;
+    padding-left: 20px;
+    padding-top: 40px;
+
+}
 
 
